// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Login Screen has credential 1`] = `
<Styled(Container)>
  <LoginForm
    alert={[Function]}
    loggingIn={true}
    onLogin={[Function]}
  />
</Styled(Container)>
`;

exports[`Testing Login Screen renders as expected 1`] = `
<Styled(Container)>
  <LoginForm
    alert={[Function]}
    onLogin={[Function]}
  />
</Styled(Container)>
`;
